coterie-app/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coterieai-apihub-service
  namespace: coteriehub
  labels:
    app: coterieai-apihub
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: coterieai-apihub
