coterie-app/kustomize/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: coteriehub-gateway
  namespace: coteriehub
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 5000
      name: db
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coterieai-apihub-vservice
  namespace: coteriehub
spec:
  hosts:
  - "*"
  gateways:
  - coteriehub-gateway
  http:
  - route:
    - destination:
        host: coterieai-apihub-service
